estruturas de repeticao

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 /exemplo_poo/build/
 /exercicios_estrutura_condicional/nbproject/private/
 /exercicios_estrutura_condicional/build/
+/poo/nbproject/private/
+/poo/build/
+/estruturas_de_selecao/nbproject/private/
+/estruturas_de_selecao/build/
+/estruturas_de_repetição/nbproject/private/
+/estruturas_de_repetição/build/
