--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,17 @@
 /exemplo_poo/build/
 /exercicios_estrutura_condicional/nbproject/private/
 /exercicios_estrutura_condicional/build/
+/poo/
 /poo/nbproject/private/
 /poo/build/
 /estruturas_de_selecao/nbproject/private/
 /estruturas_de_selecao/build/
 /estruturas_de_repetição/nbproject/private/
 /estruturas_de_repetição/build/
+/animais/
+/animais/nbproject/private/
+/animais/build/
+/numeros_primos/nbproject/private/
+/numeros_primos/build/
+/exercicios_estr_repeticao/nbproject/private/
+/exercicios_estr_repeticao/build/
