--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,14 @@
 /exemplo_poo/build/
 /exercicios_estrutura_condicional/nbproject/private/
 /exercicios_estrutura_condicional/build/
-/poo/
+poo/
 /poo/nbproject/private/
 /poo/build/
 /estruturas_de_selecao/nbproject/private/
 /estruturas_de_selecao/build/
 /estruturas_de_repetição/nbproject/private/
 /estruturas_de_repetição/build/
-/animais/
+animais/
 /animais/nbproject/private/
 /animais/build/
 /numeros_primos/nbproject/private/
